<resources>
    <string name="app_name">Navigator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_profile">Profile</string>
    <string name="toolbar_home">Home</string>
    <string name="title_nav">Navigator</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_movies">Movies</string>
    <string name="title_picture">Pictures</string>
    <string name="title_json">Json</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="item_name">Item Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="submit">Submit</string>
    <string name="weather_title">Enter City name</string>
    <string name="schedule">Schedule</string>
    <string name="cancel_all_jobs">Cancel all Jobs</string>
    <string name="start_a_job">Start a Job</string>
    <string name="download">Download</string>
    <string name="cancel_downloads">Cancel Downloads</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="check_out_the_news">Check out the news</string>
    <string name="subscribe_to_news">Subscribe to news</string>
    <string name="log_token">Log Token</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
</resources>
